Added yad 2 appartemnts to db and fake users
