# api.yaml
@@ -600,7 +600,7 @@ paths:
                 properties:
                   error:
                     type: string
-  /apartments/limit/:
+  /apartments/recommendations/:
     get:
       tags:
       - Apartments
@@ -1017,7 +1017,6 @@ components:
         - city
         - street
         - type
-        - house_number
         - floor
         - number_of_rooms
         - available_rooms
@@ -1031,8 +1030,6 @@ components:
           type: string
         type:
           type: string
-        house_number:
-          type: integer
         floor:
           type: integer
         number_of_rooms:
@@ -1055,6 +1052,8 @@ components:
           items:
             type: string
             format: binary
+        is_yad2:
+          type: boolean
         latitude:
           type: number
           format: float
